--- a/common/logger.yaml
+++ b/common/logger.yaml
@@ -8,22 +8,25 @@ logger:
     binary_sensor: WARN
     text_sensor: WARN
     homething.menu.display: WARN
-    homething.menu.base: INFO
+    homething.menu.base: WARN
     homething.boot: INFO
     homething.menu.control: INFO
-    homething.menu.screen: INFO
+    homething.menu.screen: WARN
     homething.animation: INFO
     homething.menu.text_helpers: INFO
     homething.nowplaying.control: WARN
     homeassistant.media_player_group: WARN
     homeassistant.component: WARN
-    # homeassistant.light: DEBUG
+    homeassistant.light: WARN
     homeassistant.switch: WARN
     homeassistant.text_sensor: WARN
     homeassistant.media_player_base: WARN
     homeassistant.media_player_tv: WARN
-    cover: INFO
-    # light: INFO
+    homeassistant.fan: INFO
+    media.player.source.spotify: WARN
+    media.player.source.sonos: WARN
+    cover: WARN
+    light: WARN
     api: INFO
     voice_assistant: INFO
   level: DEBUG
