add name to backlight sensor

--- a/common/tdisplay-s3/backlight.yaml
+++ b/common/tdisplay-s3/backlight.yaml
@@ -7,7 +7,7 @@ output:
 light:
   - platform: monochromatic
     output: gpio38
-    name: "Backlight"
+    name: "${friendly_name} Backlight"
     id: backlight
     restore_mode: ALWAYS_ON
 
