build debug with current branch

--- a/debug.yaml
+++ b/debug.yaml
@@ -29,9 +29,10 @@ external_components:
       type: git
       url: https://github.com/ssieb/custom_components
     components: [ ip5306 ]
-  - source: github://landonr/homeThing
-    #   type: local
-    #   path: components
+  - source: github://landonr/homeThing@main #update_to_head_ref
+  # - source:
+  #     type: local
+  #     path: components
     refresh: 0s
     components: [homeThingDisplayState, homeThing, homeThingApp, homeThingAppNowPlaying]
   - source:
