--- a/common/tdisplay-s3/lilygo_tdisplay_ipod_binary_sensor_pcf_media.yaml
+++ b/common/tdisplay-s3/lilygo_tdisplay_ipod_binary_sensor_pcf_media.yaml
@@ -25,6 +25,9 @@ binary_sensor:
     name: $friendly_name Screen Left
     id: tdisplay_button_input_0
     internal: true
+    on_press:
+      then:
+        media_player_group.select_next_player: media_group_component
   - platform: gpio
     pin:
       number: $screen_right_pin
@@ -160,8 +163,14 @@ binary_sensor:
       then:
         homething_menu.option: homeThingMenu
 
+i2c:
+  sda: $sda_pin
+  scl: $scl_pin
+  # scan: TRUE
+  id: bus_a
+  frequency: 100hz
+
 pcf8574:
   - id: 'pcf8574_hub'
     address: $pcf_address
     pcf8575: false
-    i2c_id: i2cBusA
