--- a/common/images-weather.yaml
+++ b/common/images-weather.yaml
@@ -1,7 +1,7 @@
 substitutions:
   launch_image_file: "https://github.com/landonr/homeThing/raw/main/docs/homeThingLogoWhite.svg"
   launch_image_size: "48x48"
-  launch_image_type: "TRANSPARENT_BINARY"
+  launch_image_type: "BINARY"
   weather_icon_size: "50x50"
 
 image:
