update github action parameter

--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -58,4 +58,4 @@ jobs:
       - name: Build esphome
         uses: esphome/build-action@v6.0.0
         with:
-          yaml_file: ${{ matrix.name }}
+          yaml-file: ${{ matrix.name }}
