--- a/m5stack-stickc.yaml
+++ b/m5stack-stickc.yaml
@@ -63,6 +63,7 @@ packages: # maybe modify: include default ipod controls
       common/m5stack-stickc/axp192-marty.yaml, # power management and screen backlight
       common/m5stack-stickc/binary_sensor.yaml, # power management and screen backlight
       common/images.yaml, # boot screen image
+      common/logger.yaml, # logger
     ]
     refresh: 0s
 
